# auto-atlas

./: AGENTS.md  README.md  pyproject.toml
.claude/skills/gene-resolver/: SKILL.md
.claude/skills/genetic-perturbation-resolver/: SKILL.md
.claude/skills/molecule-resolver/: SKILL.md
.claude/skills/ontology-resolver/: SKILL.md
.claude/skills/protein-resolver/: SKILL.md
.github/workflows/: ci.yml
auto_atlas/: __init__.py  collection.py  genes.py  gget.py  guide_rna.py  ingestion.py  metadata_table.py  molecules.py  ncbi.py  ontologies.py  proteins.py  registries.py  resolution_registry.py  tool_registry.py  types.py  util.py
auto_atlas/curation/: __init__.py  applicator.py  audit.py  propose.py  sql.py  types.py
auto_atlas/resolvers/: pipeline.py
skills/atlas-designer/: SKILL.md
skills/atlas-designer/references/: homeobox_concepts.md  multimodal_perturbation_atlas_schema.py
skills/create-data-package/: SKILL.md
skills/data-preparer/: SKILL.md
skills/finalize-tables/: SKILL.md
skills/gene-resolver/: SKILL.md
skills/genetic-perturbation-resolver/: SKILL.md
skills/geo-data-curator/: SKILL.md
skills/geo-data-downloader/: SKILL.md
skills/geo-data-preparer/: SKILL.md
skills/molecule-resolver/: SKILL.md
skills/multimodal-alignment/: SKILL.md
skills/ontology-resolver/: SKILL.md
skills/prepare-package-for-resolution/: SKILL.md
skills/protein-resolver/: SKILL.md
skills/publication-resolver/: SKILL.md
skills/schema-harmonization/: SKILL.md
specs/: resolver-framework.md
tests/: test_registries.py
tests/curation/: test_curation.py
(+37 files in other folders)
